--- a/vercel.json
+++ b/vercel.json
@@ -1,8 +1,6 @@
 {
-  "buildCommand": "pnpm run build",
-  "installCommand": "pnpm install --frozen-lockfile",
+  "installCommand": "cd ../.. && pnpm install --frozen-lockfile",
+  "buildCommand": "cd ../.. && pnpm run build:frontend",
   "framework": "nextjs",
-  "outputDirectory": ".next",
-  "devCommand": "pnpm run dev",
-  "ignoreCommand": "git diff --quiet HEAD^ HEAD ."
+  "outputDirectory": "apps/frontend/.next"
 }
